--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<div class="w3ls_banner_txt">
 								<h3 class="b-w3ltxt text-capitalize mt-md-4">Corporate <span>Business</span> </h3>
 								<h4 class="b-w3ltxt text-capitalize">Best Technology Demand</h4>
-								<p class="w3ls_pvt-title my-3">onec consequat sapien ut leo cursus rhoncus. Nullam dui mi, vulputate ac metus semper Nullam dui mi.
-								 Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubiliacurae, Curabitur quis luctus lectus.
-								 Morbi at dui nisl.</p>
+								<p class="w3ls_pvt-title my-3">Nuestro conocimiento y experiencia la hemos convertido en servicios
+									y asesorías flexibles para construir una solución que se adapte a sus requerimientos y necesidades. 
+									Incluyen las áreas de; Gestión Estratégica de Tecnología, Computación e Informática, Desarrollo Web, Webmaster,
+									Copias de seguridad y servicios de software e integración de hardware (dispositivos, computadoras, cámaras).</p>
 								<a href="services.html" class="btn btn-banner my-sm-3 mr-2">Read More</a>
 								<a href="contact.html" class="btn btn-banner1 my-sm-3">Get Started</a>
 							</div>
